Add veille description,thumbnail and modal when clicking

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.14",
+    "@types/marked": "^5.0.2",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "aos": "^2.3.4",
@@ -28,6 +29,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.483.0",
+    "marked": "^17.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
