add: ajouter un nom accessible pour les boutons
 1. Updated `src/components/ui/modal.tsx`: Added a closeLabel prop to the Modal component and applied it as an aria-label to the close button, ensuring that
      screen readers can identify its purpose.
   2. Updated `src/i18n/ui.ts`: Added translations for common.close ("Fermer" / "Close") and common.menu ("Menu") in both French and English to provide
      localized accessible names.
   3. Updated `src/components/GlassHeader.tsx`: Added an aria-label to the mobile menu toggle button using the new translation.
   4. Updated Modal Usages: Passed the appropriate closeLabel to all Modal instances in GraphismSection.tsx, VeilleSection.tsx, and ProjectsSection.tsx.
   5. Verified Other Buttons: Confirmed that buttons in HeroSection.tsx, ContactSection.tsx, and ThemeToggle already had accessible names through visible text
      or sr-only spans.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.2.1",
+    "@fontsource/inter": "^5.2.8",
+    "@fontsource/teko": "^5.2.7",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.14",
